# wealthfolio-cli

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
skills/wealthfolio-cli/: SKILL.md
src/: auth.rs  client.rs  config.rs  error.rs  main.rs
src/commands/: accounts.rs  activities.rs  doctor.rs  login.rs  mod.rs  net_worth.rs
src/models/: account.rs  activity.rs  mod.rs  net_worth.rs
